# Manager

./: .gitignore  CMakeLists.txt  README.md
include/: GenArray.h  HistoManager.h  ObjectManager.h
src/: GenArray.cc  HistoManager.cc  ObjectManager.cc  test.cpp
